--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/buttonClear"
+            android:onClick="onClearClick"
             app:layout_constraintStart_toEndOf="@+id/buttonUndo"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="4dp"
             app:layout_constraintTop_toBottomOf="@+id/textViewResult" android:layout_marginBottom="8dp"
