--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/buttonUndo"
+            android:onClick="onUndoButtonClick"
             app:layout_constraintStart_toEndOf="@+id/buttonCopy"
             app:layout_constraintEnd_toStartOf="@+id/buttonClear" android:layout_marginTop="4dp"
             app:layout_constraintTop_toBottomOf="@+id/textViewResult" android:layout_marginBottom="8dp"
