--- a/app/src/main/res/layout/dialog_tegashiki.xml
+++ b/app/src/main/res/layout/dialog_tegashiki.xml
@@ -16,20 +16,20 @@
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"></io.github.karino2.tegashiki.StrokeCanvas>
     <TextView
-            android:text=""
+            android:text="(empty)"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:id="@+id/textViewResult"
-            app:layout_constraintBottom_toTopOf="@+id/buttonCopy" app:layout_constraintEnd_toEndOf="parent"
+            style="@android:style/TextAppearance.Large"
+            app:layout_constraintBottom_toTopOf="@+id/buttonClear" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="@+id/guideline"/>
 
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Copy"
-            android:id="@+id/buttonCopy"
-            android:onClick="onCopyButtonClick"
+            android:text="Clear"
+            android:id="@+id/buttonClear"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/buttonUndo"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
@@ -38,17 +38,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/buttonUndo"
-            android:onClick="onUndoButtonClick"
-            app:layout_constraintStart_toEndOf="@+id/buttonCopy"
-            app:layout_constraintEnd_toStartOf="@+id/buttonClear" android:layout_marginTop="4dp"
+            app:layout_constraintStart_toEndOf="@+id/buttonClear"
+            app:layout_constraintEnd_toStartOf="@+id/buttonSend" android:layout_marginTop="4dp"
             app:layout_constraintTop_toBottomOf="@+id/textViewResult" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"/>
     <Button
-            android:text="Clear"
+            android:text="Send"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/buttonClear"
-            android:onClick="onClearClick"
+            android:id="@+id/buttonSend"
             app:layout_constraintStart_toEndOf="@+id/buttonUndo"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="4dp"
             app:layout_constraintTop_toBottomOf="@+id/textViewResult" android:layout_marginBottom="8dp"
@@ -56,6 +54,6 @@
     <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                 android:id="@+id/guideline"
                                                 android:orientation="horizontal"
-                                                app:layout_constraintGuide_begin="219dp"/>
+                                                app:layout_constraintGuide_begin="180dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
