--- a/app/src/main/res/layout/activity_training_create.xml
+++ b/app/src/main/res/layout/activity_training_create.xml
@@ -16,7 +16,7 @@
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
-            ></io.github.karino2.tegashiki.StrokeCanvas>
+    ></io.github.karino2.tegashiki.StrokeCanvas>
     <Button
             android:text="Next"
             android:layout_width="wrap_content"
@@ -25,7 +25,8 @@
             android:id="@+id/buttonNext"
             android:onClick="onNextClick"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toEndOf="@+id/textViewCount" app:layout_constraintHorizontal_bias="0.5"/>
     <EditText
             android:text="prefix"
             android:layout_width="0dp"
@@ -59,5 +60,13 @@
                                                 android:id="@+id/guideline"
                                                 android:orientation="horizontal"
                                                 app:layout_constraintGuide_begin="283dp"/>
+    <TextView
+            android:text="0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textViewCount" app:layout_constraintEnd_toStartOf="@+id/buttonNext"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
+            android:layout_marginTop="22dp" app:layout_constraintTop_toBottomOf="@+id/canvas"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
